# gpumanager

./: .gitignore  Cargo.toml  config.toml  deploy.sh  egpu-manager-spezifikation.md  egpu-managerd.service  install-service.sh  llm-secrets.toml.example  pipeline-profiles.toml
.github/workflows/: ci.yml
clients/python/: __init__.py  egpu_llm_client.py  egpu_manager_client.py  pyproject.toml  test_egpu_llm_client.py
clients/react/: EgpuPipelineWidget.tsx
clients/vue/: EgpuPipelineWidget.vue
crates/egpu-manager-cli/: Cargo.toml
crates/egpu-manager-cli/src/: main.rs
crates/egpu-manager-common/: Cargo.toml
crates/egpu-manager-common/src/: config.rs  error.rs  gpu.rs  hal.rs  lib.rs
crates/egpu-manager-detector/: Cargo.toml
crates/egpu-manager-detector/src/: lib.rs
crates/egpu-manager-gtk/: Cargo.toml  egpu-manager-widget.desktop
crates/egpu-manager-gtk/src/: api_client.rs  main.rs  popup.rs  state.rs  tray.rs
crates/egpu-managerd/: Cargo.toml
crates/egpu-managerd/src/: aer.rs  db.rs  docker.rs  health_score.rs  kmsg.rs  link_health.rs  main.rs  metrics.rs  monitor.rs  nvidia.rs  ollama.rs  recovery.rs  remote_listener.rs  scheduler.rs  setup_generator.rs  sysfs.rs  sysinfo.rs  warning.rs
crates/egpu-managerd/src/llm/: api.rs  budget.rs  mod.rs  provider.rs  router.rs  types.rs
crates/egpu-managerd/src/llm/providers/: anthropic.rs  gemini.rs  mod.rs  openai_compat.rs
crates/egpu-managerd/src/web/: api.rs  mod.rs  sse.rs  ui.rs
