[workspace]
resolver = "2"
members = [
    "crates/egpu-managerd",
    "crates/egpu-manager-cli",
    "crates/egpu-manager-detector",
    "crates/egpu-manager-common",
    "crates/egpu-manager-gtk",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Jan"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
