[package]
name = "egpu-manager-cli"
version.workspace = true
edition.workspace = true

[dependencies]
egpu-manager-common = { path = "../egpu-manager-common" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
