[package]
name = "egpu-managerd"
version.workspace = true
edition.workspace = true

[features]
mock-hardware = ["egpu-manager-common/mock-hardware"]

[dependencies]
egpu-manager-common = { path = "../egpu-manager-common" }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { workspace = true }
tokio-util = "0.7"
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
thiserror = { workspace = true }
arc-swap = "1"
